--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,19 @@
     <version>2.2</version>
   </dependency>
 
+  <dependency>
+    <groupId>org.jgrapht</groupId>
+  <artifactId>jgrapht-core</artifactId>
+  <version>1.2.0</version>
+</dependency>
+
+<dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20180130</version>
+</dependency>
+
+
   </dependencies>
 
   <build>
